# assetto-adas

./: CMakeLists.txt  Doxyfile  README.md  test_data.csv
data/: processed_telemetry.csv
docs/: architecture.md
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_d_m_s_h_u_d-members.html  class_d_m_s_h_u_d.html  class_d_m_s_monitor-members.html  class_d_m_s_monitor.html  class_d_m_s_monitor.js  class_dashboard-members.html  class_dashboard.html  class_dashboard.js  class_o_b_d_parser-members.html  class_o_b_d_parser.html  class_o_b_d_parser.js  class_o_n_n_x_classifier-members.html  class_o_n_n_x_classifier.html  class_o_n_n_x_classifier.js  classes.html  dashboard_8cpp.html  dashboard_8cpp_source.html  dashboard_8h.html  dashboard_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dms__hud_8cpp.html  dms__hud_8cpp_source.html  dms__hud_8h.html  dms__hud_8h_source.html  dms__monitor_8cpp.html  dms__monitor_8cpp_source.html  dms__monitor_8h.html  dms__monitor_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  (+35 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_2.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js  (+2 more)
models/: driver_classifier.onnx  driver_classifier.onnx.data  normalization_params.json
src/: dashboard.cpp  dashboard.h  dms_hud.cpp  dms_hud.h  dms_monitor.cpp  dms_monitor.h  main.cpp  main_dms.cpp  obd_parser.cpp  obd_parser.h  onnx_classifier.cpp  onnx_classifier.h  shared_state.h
tests/: test_dms.cpp  test_obd_parser.cpp
